--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -5,8 +5,8 @@
     <corners android:radius="15dp"/>
 
     <gradient
-        android:angle="90"
-        android:startColor="#99A1C5D5"
+        android:angle="0"
+        android:startColor="#99D1EA"
         android:endColor="#A1C5D5" >
     </gradient>
 </shape>
