--- a/app/src/main/res/drawable/dialog_bottom_background.xml
+++ b/app/src/main/res/drawable/dialog_bottom_background.xml
@@ -7,7 +7,7 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#99A1C5D5"
+        android:startColor="#99D1EA"
         android:endColor="#A1C5D5" >
     </gradient>
 </shape>
