--- a/app/src/main/res/layout/item_profile_collectiontrip.xml
+++ b/app/src/main/res/layout/item_profile_collectiontrip.xml
@@ -37,32 +37,31 @@
 
             <TextView
                 android:id="@+id/text_collectiontrip_describe"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="TextView"
                 android:textColor="@color/white"
-                android:textSize="18sp"
-                android:typeface="monospace"
-                app:layout_constraintBottom_toTopOf="@+id/image_collectiontrip_owner_collection"
-                app:layout_constraintStart_toEndOf="@+id/image_collectiontrip_photo" />
+                android:textSize="14sp"
+                android:typeface="sans"
+                app:layout_constraintBottom_toBottomOf="@+id/image_collectiontrip_owner_collection"
+                app:layout_constraintEnd_toStartOf="@+id/image_collectiontrip_owner_collection"
+                app:layout_constraintStart_toEndOf="@+id/image_collectiontrip_photo"
+                app:layout_constraintTop_toTopOf="@+id/image_collectiontrip_owner_collection" />
 
             <TextView
                 android:id="@+id/text_colletiontrip_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:lineSpacingExtra="18sp"
                 android:text="TextView"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:typeface="monospace"
-                app:layout_constraintBottom_toTopOf="@+id/image_collectiontrip_photo"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:typeface="sans"
+                app:layout_constraintBottom_toTopOf="@+id/text_collectiontrip_describe"
+                app:layout_constraintStart_toEndOf="@+id/image_collectiontrip_photo" />
 
             <ImageView
                 android:id="@+id/image_collectiontrip_photo"
@@ -81,9 +80,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="4dp"
                 android:text="0"
                 android:textColor="@color/white"
+                android:typeface="sans"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -91,14 +91,12 @@
                 android:id="@+id/image_collectiontrip_trip_collection"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="1dp"
                 android:scaleType="fitXY"
                 android:tint="@color/star"
                 app:layout_constraintBottom_toBottomOf="@+id/text_collectiontrip_collection_number"
                 app:layout_constraintEnd_toStartOf="@+id/text_collectiontrip_collection_number"
                 app:layout_constraintTop_toTopOf="@+id/text_collectiontrip_collection_number"
-                app:srcCompat="@mipmap/icon_star" />
+                app:srcCompat="@mipmap/icon_label_star_tint" />
 
             <TextView
                 android:id="@+id/text_collectiontrip_owner_number"
@@ -107,6 +105,7 @@
                 android:layout_marginEnd="4dp"
                 android:text="0"
                 android:textColor="@color/white"
+                android:typeface="sans"
                 app:layout_constraintBottom_toBottomOf="@+id/text_collectiontrip_collection_number"
                 app:layout_constraintEnd_toStartOf="@+id/image_collectiontrip_trip_collection"
                 app:layout_constraintTop_toTopOf="@+id/text_collectiontrip_collection_number" />
@@ -114,14 +113,16 @@
 
             <ImageView
                 android:id="@+id/image_collectiontrip_owner_collection"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginEnd="3dp"
                 android:clickable="false"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
+                android:tint="@color/white"
                 app:layout_constraintBottom_toBottomOf="@+id/text_collectiontrip_owner_number"
                 app:layout_constraintEnd_toStartOf="@+id/text_collectiontrip_owner_number"
                 app:layout_constraintTop_toTopOf="@+id/text_collectiontrip_owner_number"
-                app:srcCompat="@drawable/ic_person_outline_black_24dp" />
+                app:srcCompat="@mipmap/icon_group" />
 
             <ImageButton
                 android:id="@+id/imageButton_collectiontrip_delete"
