--- a/app/src/main/res/layout/item_profile_newtrip.xml
+++ b/app/src/main/res/layout/item_profile_newtrip.xml
@@ -41,29 +41,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
                 android:text="TextView"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:typeface="monospace"
-                app:layout_constraintBottom_toTopOf="@+id/image_newtrip_photo"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:typeface="sans"
+                app:layout_constraintBottom_toTopOf="@+id/text_newtrip_describe"
+                app:layout_constraintStart_toEndOf="@+id/image_newtrip_photo" />
 
             <TextView
                 android:id="@+id/text_newtrip_describe"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="TextView"
                 android:textColor="@color/white"
-                android:textSize="18sp"
-                android:typeface="monospace"
-                app:layout_constraintBottom_toTopOf="@+id/image_newtrip_owner_collection"
+                android:textSize="14sp"
+                android:typeface="sans"
+                app:layout_constraintBottom_toBottomOf="@+id/image_newtrip_owner_collection"
+                app:layout_constraintEnd_toStartOf="@+id/image_newtrip_owner_collection"
                 app:layout_constraintStart_toEndOf="@+id/image_newtrip_photo"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout16" />
+                app:layout_constraintTop_toTopOf="@+id/image_newtrip_owner_collection" />
 
             <ImageView
                 android:id="@+id/image_newtrip_photo"
@@ -81,25 +80,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="4dp"
                 android:text="0"
                 android:textColor="@color/white"
                 android:tint="@color/white"
+                android:typeface="sans"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
 
             <ImageView
                 android:id="@+id/image_newtrip_owner_collection"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginEnd="3dp"
                 android:clickable="false"
-                android:paddingRight="2dp"
                 android:scaleType="fitXY"
+                android:tint="@color/white"
                 app:layout_constraintBottom_toBottomOf="@+id/text_newtrip_owner_number"
                 app:layout_constraintEnd_toStartOf="@+id/text_newtrip_owner_number"
                 app:layout_constraintTop_toTopOf="@+id/text_newtrip_owner_number"
-                app:srcCompat="@drawable/ic_person_outline_black_24dp" />
+                app:srcCompat="@mipmap/icon_group" />
 
 
 
@@ -135,7 +136,7 @@
                     android:text="TextView"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-                    android:typeface="monospace"
+                    android:typeface="sans"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
