--- a/app/src/main/res/layout/item_trip_content.xml
+++ b/app/src/main/res/layout/item_trip_content.xml
@@ -3,37 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="200dp">
 
-
-    <View
-        android:id="@+id/view5"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/gray_99"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_trip_content_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/trip_white_corner"
         android:gravity="center"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="2dp"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="@+id/view5"
+        android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view5"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="TextView" />
 
 
@@ -41,30 +32,25 @@
         android:id="@+id/text_trip_content_cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="2dp"
         android:textColor="@color/gray"
         android:textSize="14sp"
-        android:typeface="monospace"
+        android:typeface="sans"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout15"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_trip_content_day"
+        app:layout_constraintEnd_toEndOf="@+id/constraintLayout15"
         tools:text="TextView" />
 
     <TextView
         android:id="@+id/text_trip_content_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="2dp"
         android:textColor="@color/gray"
         android:textSize="14sp"
-        android:typeface="monospace"
+        android:textStyle="bold"
+        android:typeface="sans"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_trip_content_day"
+        app:layout_constraintStart_toStartOf="@+id/constraintLayout15"
         tools:text="TextView" />
 
     <android.support.constraint.ConstraintLayout
@@ -89,7 +75,7 @@
             android:maxLines="2"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:typeface="monospace"
+            android:typeface="sans"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
