--- a/app/src/main/res/layout/item_profile_collectiontrip.xml
+++ b/app/src/main/res/layout/item_profile_collectiontrip.xml
@@ -55,13 +55,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="TextView"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:typeface="sans"
                 app:layout_constraintBottom_toTopOf="@+id/text_collectiontrip_describe"
-                app:layout_constraintStart_toEndOf="@+id/image_collectiontrip_photo" />
+                app:layout_constraintStart_toEndOf="@+id/image_collectiontrip_photo"
+                app:layout_constraintTop_toTopOf="@+id/image_collectiontrip_photo" />
 
             <ImageView
                 android:id="@+id/image_collectiontrip_photo"
