--- a/app/src/main/res/layout/item_profile_completetrip.xml
+++ b/app/src/main/res/layout/item_profile_completetrip.xml
@@ -40,13 +40,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="TextView"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:typeface="sans"
                 app:layout_constraintBottom_toTopOf="@+id/text_completetrip_describe"
-                app:layout_constraintStart_toEndOf="@+id/image_completetrip_photo" />
+                app:layout_constraintStart_toEndOf="@+id/image_completetrip_photo"
+                app:layout_constraintTop_toTopOf="@+id/image_completetrip_photo" />
 
             <TextView
                 android:id="@+id/text_completetrip_describe"
