--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="radius_profile_avatar">70dp</dimen>
     <dimen name="login_title">60sp</dimen>
     <dimen name="text">14sp</dimen>
+    <dimen name="bottom_navigation_item_size">36dp</dimen>
 
 </resources>
