--- a/app/src/main/res/layout/fragment_addordeletepoint.xml
+++ b/app/src/main/res/layout/fragment_addordeletepoint.xml
@@ -152,6 +152,7 @@
 
     <Button
         android:id="@+id/button_point_time"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
