--- a/app/src/main/res/layout/dialog_add_trip.xml
+++ b/app/src/main/res/layout/dialog_add_trip.xml
@@ -117,6 +117,7 @@
 
     <Button
         android:id="@+id/button_add_trip_starttime"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="140dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
@@ -129,6 +130,7 @@
 
     <Button
         android:id="@+id/button_add_trip_endtime"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="140dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
