--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -44,8 +44,8 @@
                     android:layout_marginEnd="10dp"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:tint="@color/gray_99"
                     android:visibility="visible"
+                    android:tint="@color/white_DD"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@mipmap/icon_label_star" />
