rename value string

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,9 @@
     <color name="black_66">#66000000</color>
     <color name="star">#F9DB49</color>
 
+    <color name="polyline">#EE5873</color>
+    <color name="polyline_dash">#6B374D</color>
+
+
+
 </resources>
